# HSSM

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  CLAUDE.md  Dockerfile  ELLIPSE_PLOTTING_GUIDE.md  LICENSE  Makefile  README.md  andrewsbug.py  build.py  ddm_hierarchical_tutorial.ipynb  exgaussian_wald.ipynb  extract.py  index.html  main.py  mkdocs.yml  mypy.ini  notebooks.toml  objects.inv  package-lock.json  pylintrc  pyproject.toml  readdocx.py  reparameterization_tutorial.ipynb  search.py  searchdocx.py  searchpdf.py  setup.py  shrink_spot_simple_extended_lan_64708af6803c11f0931d4b53c8b8bed9_model.onnx  test_lapse_deprecation.py  tokenize_.py
.claude/rules/: uv.md
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  feature_request.md
.github/setup-env/: action.yml
.github/setup-env-notebooks/: action.yml
.github/setup-poetry-env/: action.yml
.github/workflows/: build_and_publish.yml  build_docs.yml  build_docs_release.yml  check_notebooks.yml  coverage.yml  devcontainer.yml  docker-image.yml  linting_and_type_checking.yml  prepare-release.yml  run_fast_tests.yml  run_slow_tests.yml  run_tests.yml
CONTRIBUTING/: index.html
HSSM/: pyproject.toml
__marimo__/session/: marimo_test.py.json  marimo_tutorial.py.json
addm-andrew-dev/: ADDM_DEVELOPMENT_SUMMARY.md  addm_hssm.md  addm_hssm_class.md  addm_hssm_class_summary.md
addm_andrew_dev /: aDDM_likelihood.ipynb  addm_hssm.md
addm_andrew_dev /addm_likelihood/: multi_stage_cy.pyx
api/check_data_for_rl/: index.html
api/defaults/: index.html
api/distribution_utils/: index.html
api/hssm/: index.html
api/likelihoods/: index.html
api/link/: index.html
api/load_data/: index.html
api/model_config/: index.html
api/param/: index.html
api/plotting/: index.html
api/prior/: index.html
api/rl/: index.html
api/set_floatx/: index.html
api/show_defaults/: index.html
api/simulate_data/: index.html
carney_workshop/: basic_ddm.ipynb  hssm_advanced_1.ipynb  scientific_workflow_hssm.ipynb
changelog/: index.html
credits/: index.html
design/hssm_hmm/: index.html
design/hssm_hmm_overview/: index.html
docs/: CONTRIBUTING.md  api_distribution_utils.md  api_likelihoods.md  base.md  changelog.md  config.md  credits.md  hssm.md  index.md  installation.md  likelihoods.md  local_development.md  tutorial_likelihoods.md  wfpt.md
docs/api/: check_data_for_rl.md  defaults.md  distribution_utils.md  hssm.md  likelihoods.md  link.md  load_data.md  model_config.md  param.md  plotting.md  prior.md  rl.md  rsssm.md  set_floatx.md  show_defaults.md  simulate_data.md
docs/design/: hssm_hmm.md  hssm_hmm_overview.md
docs/getting_started/: getting_started.ipynb  hierarchical_modeling.ipynb  installation.md
docs/notebooks/: 004_using_base_hssm_func.ipynb  Untitled.ipynb  hugging_face_onnx_models.ipynb  pymc.ipynb
docs/overrides/: main.html
docs/styles/: extra.css
docs/tutorial_notebooks/: hugging_face_onnx_models.ipynb  pymc.ipynb  tutorial_likelihoods.ipynb
docs/tutorials/: add_custom_rlssm_model.ipynb  attentional_ddm.py  bayesflow_lre_integration.ipynb  bayesflow_nle_onnx_integration.ipynb  blackbox_contribution_onnx_example.ipynb  centered_vs_noncentered_basic_logic.ipynb  choice_only_models.ipynb  choice_only_rlssm.ipynb  compile_logp.ipynb  ddm_hierarchical_tutorial.ipynb  do_operator.ipynb  hier_vs_non_hier_demo.ipynb  hmm_ddm_regime_switching.ipynb  hssm_rlssm_tutorial.ipynb  hssm_tutorial_workshop_1.ipynb  hssm_tutorial_workshop_2.ipynb  hugging_face_onnx_models.ipynb  inference_data.ipynb  initial_values.ipynb  jax_callable_contribution_onnx_example.ipynb  lapse_prob_and_dist.ipynb  likelihoods.ipynb  main_tutorial.ipynb  marimo_tutorial.py  parameterization_per_parameter.ipynb  plotting.ipynb  poisson_race.ipynb  pymc.ipynb  pymc_to_hssm.ipynb  rl_likelihood_abstraction_tutorial.ipynb  rl_likelihood_builder_tutorial.ipynb  rlssm_advanced.ipynb  rlssm_basic.ipynb  rlssm_hssm_custom_models.ipynb  rlssm_quickstart.ipynb  rlssm_restless_learner.ipynb  rlssm_rlwm_model.ipynb  rlssm_tutorial.ipynb  rlssm_tutorial2.ipynb  rsssm_k3.ipynb  (+13 more)
getting_started/getting_started/: index.html
getting_started/hierarchical_modeling/: index.html
getting_started/installation/: index.html
license/: index.html
local_development/: index.html
notebooks/: 001_using_factory_functions.ipynb  002_basic_model_evaluation.ipynb  003_bambi_with_custom_HSSM.ipynb  004_using_base_hssm_func.ipynb  005_using_blackbox_likelihood_functions.ipynb  Untitled.ipynb  Using_Bambi_with_custom_HSSM.ipynb  Using_WFPT_class_factory.ipynb  WFPT_model_evaluation.ipynb  bambi_pps_error.ipynb  hugging_face_onnx_models.ipynb  tutorial_basic_hssm.ipynb
onnx_models/: lca_no_bias_4.onnx  weibull.onnx
overrides/: main.html
scripts/: addm_parameter_recovery.py  notebook_jobs.py  run_pytest_safe.py  sbatch_submit_notebook_jobs.sh  submit_notebook_jobs.sh
search/: search_index.json
src/: mkdocs.yml  new_path.onnx
src/award/: extract.py  ingest.py  main.py  searchdocx.py  searchpdf.py  spellcheck.py  tokenize_.py  utils.py
src/docs/: 004_using_base_hssm_func.ipynb  base.md  hssm.md  (+2 more)
tests/: __init__.py  conftest.py  test_adjust_logp.py  test_config.py  test_data.py  test_data_sanity.py  test_data_validator.py  test_default_config.py  test_defaults.py  test_distribution_utils.py  test_ellipse_qp.py  test_filename_parser.py  test_foo.py  test_get_model_config.py  test_get_model_meta.py  test_graphing.py  test_hssm.py  test_hssmbase.py  test_import_behavior.py  test_initvals.py  test_io.py  test_jitter.py  test_lan_onnx.py  test_lapse_config.py  test_likelihoods.py  test_likelihoods_choice_only.py  test_likelihoods_lba.py  test_likelihoods_poisson_race.py  test_likelihoods_rdm.py  test_make_jax_single_trial_logp_from_networks.py  test_mcmc.py  test_missing_and_deadline.py  test_missing_data_mixin.py  test_model_cartoon_colors.py  test_modelconfig.py  test_modelmeta.py  test_noncentered.py  test_notebook_jobs.py  test_numerical_stability_utils.py  test_onnx.py  (+19 more)
(+322 files in other folders)
